examples/test/testpolicy17341.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17341
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key37: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value26
      podSelector:
        matchLabels:
          key39: value21
          key33: value14
          key47: value39
